# cheftrace

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  railway.toml
apps/backend/: .env.example  Dockerfile  README.md  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_users_restaurants_memberships.py  002_categories_suppliers_products.py  003_stock_lots_movements_audit.py  004_equipment_haccp.py  005_immutable_triggers.py  006_purchase_lists.py  007_haccp_equipment_type_filter.py  008_invoices.py  009_recipes.py  010_recipe_productions.py  011_extend_movement_source_check.py  012_pos_integrations.py  013_haccp_template_frequency_fix.py
apps/backend/app/: main.py
apps/backend/app/api/: deps.py
apps/backend/app/core/: config.py  database.py  exceptions.py  logging.py  permissions.py  security.py
apps/backend/app/integrations/: providers.py
apps/backend/app/models/: __init__.py  audit_log.py  base.py  category.py  enums.py  equipment.py  haccp_answer.py  haccp_item_template.py  haccp_run.py  haccp_template.py  invoice.py  pos_event.py  (+16 more)
apps/backend/scripts/: migrate-local.sh  migrate-railway.sh
apps/backend/tests/: conftest.py  test_dashboard_service.py  test_haccp_service.py  test_health.py  test_invoices.py  test_llm_normalizer_service.py  test_pdf_service.py  test_permissions.py  test_pos_event_processor.py  test_pos_integration.py  test_pos_mappings.py  test_pos_webhook_auto_trigger.py  test_purchase_list_service.py  test_recipe_production.py  test_recipes.py  test_square_webhook.py  test_stock_service_fefo.py
(+126 files in other folders)
